Naprawa błedu z szachownicą

--- a/templates/index.html
+++ b/templates/index.html
@@ -23,7 +23,7 @@
                 <button name="Cofnij" type="submit">Cofnij ostatni ruch</button>
             </form>
             <form action="/silnik/" method="post">
-                <button name="Ruch Stockfish" type="submit">Wykonaj ruch Stockfish</button>
+                <button name="Ruch SI" type="submit">Wykonaj ruch SI</button>
             </form>
         </div>
         <div class="status">{{ status }}</div>
