--- a/templates/index.html
+++ b/templates/index.html
@@ -16,7 +16,7 @@
                 <button name="Nowa Gra" type="submit">Nowa Gra</button>
             </form>
             <form action="/ruch/">
-                <input type="text" name="ruch" placeholder="Ruch"></input>
+                <input type="text" name="ruch" placeholder="Ruch" autofocus></input>
                 <button type="submit">Wykonaj</button>
             </form>
             <form action="/cofnij/" method="post">
